--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "task-manager-lit",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "lit": "^2.6.1"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
-  }
+    "name": "task-manager-lit",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "test": "jest --watchAll"
+    },
+    "dependencies": {
+        "lit": "^2.6.1"
+    },
+    "devDependencies": {
+        "@babel/preset-typescript": "^7.21.5",
+        "@types/jest": "^29.5.1",
+        "jest": "^29.5.0",
+        "sass": "^1.62.1",
+        "ts-jest": "^29.1.0",
+        "typescript": "^5.0.2",
+        "vite": "^4.3.2"
+    }
 }
