--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "sass": "^1.62.1",
         "ts-jest": "^29.1.0",
         "typescript": "^5.0.2",
-        "vite": "^4.3.2"
+        "vite": "^4.3.2",
+        "vite-aliases": "^0.11.0"
     }
 }
