[app-paper] finish component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,9 @@
       ],
       "@/*": [
         "src/*"
+      ],
+      "@app-input/*": [
+        "src/components/app-input/*"
       ]
     }
   },
