--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,48 +1,57 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "experimentalDecorators": true,
-    "useDefineForClassFields": false,
-    "module": "ESNext",
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
-    "skipLibCheck": true,
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "paths": {
-      "@assets/*": [
-        "src/assets/*"
-      ],
-      "@components/*": [
-        "src/components/*"
-      ],
-      "@containers/*": [
-        "src/containers/*"
-      ],
-      "@styles/*": [
-        "src/styles/*"
-      ],
-      "@/*": [
-        "src/*"
-      ],
-      "@app-input/*": [
-        "src/components/app-input/*"
-      ]
-    }
-  },
-  "include": [
-    "src"
-  ]
+    "compilerOptions": {
+        "target": "ES2020",
+        "experimentalDecorators": true,
+        "useDefineForClassFields": false,
+        "module": "ESNext",
+        "lib": [
+            "ES2020",
+            "DOM",
+            "DOM.Iterable"
+        ],
+        "skipLibCheck": true,
+        /* Bundler mode */
+        "moduleResolution": "bundler",
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        /* Linting */
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+        "paths": {
+            "@assets/*": [
+                "src/assets/*"
+            ],
+            "@components/*": [
+                "src/components/*"
+            ],
+            "@containers/*": [
+                "src/containers/*"
+            ],
+            "@styles/*": [
+                "src/styles/*"
+            ],
+            "@/*": [
+                "src/*"
+            ],
+            "@app-input/*": [
+                "./src/components/app-input/*"
+            ],
+            "@mixins/*": [
+                "./src/styles/mixins/*"
+            ],
+            "@app-checkbox/*": [
+                "./src/components/app-checkbox/*"
+            ],
+            "@icons/*": [
+                "./src/assets/icons/*"
+            ]
+        }
+    },
+    "include": [
+        "src"
+    ]
 }
